spacing fix

--- a/style.css
+++ b/style.css
@@ -294,14 +294,13 @@ section.hero {
 
 section.recent-events {
   display: inline-block;
-  /* height: 100vh; */
-  margin-bottom: 20vh;
   margin-top: 10%;
+  margin-bottom: 4rem;
 }
 
 section.recent-events p {
   text-align: center;
-  margin-bottom: 49px;
+  
 }
 
 .row {
